docs: add otp swagger docs
